Fix info cards breaking due to overlap of classnames

--- a/src/css/InfoCards.css
+++ b/src/css/InfoCards.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 960px) {
     .info-cards {
-        height: 121px;
+        height: auto;
         background-color: #1e1e2f;
         margin-bottom: 1%;
     }
